feat: change courses to account for image path
